# applyBN

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: black.yml  ci.yml  tests.yml
api/bn_oversampling/: index.html
api/feature_extraction/: index.html
api/feature_selection/: index.html
api/pipeline_creation/: index.html
api/synthetic_data_generation/: index.html
applybn/: __init__.py  pipeline_creator.py
applybn/anomaly_detection/: estimator_playground.py  tDetector_playground.py
applybn/core/: __init__.py  data_iq.py  data_preprocessing_decorators.py  estimators.py  exceptions.py  logger.py  progress_bar.py  schema.py
applybn/data_augmentation/: __init__.py  granular_evaluation.py  label_rebalance.py  train_test_expand.py
applybn/data_generation/: __init__.py  base_class.py  class_balance.py  get_bn.py  model_testing.py  (+1 more)
docs/reference/: logger.md
examples/: class_balance_exp.py  class_balance_with_bn.py  class_balance_with_ctgan.py  class_balance_with_smote.py  divergence_test.py  new_sampling_algo.py  new_sampling_algo_1.py  new_sampling_algo_2.py  new_sampling_algo_exp.py  synth_train_bn_balanced_class_bn.py  synth_train_bn_balanced_class_ctgan.py  synth_train_bn_balanced_class_smote.py
search/: search_index.json
tests/: bn_feature_extractor_fit_tests.py  bn_feature_extractor_initialization_test.py  bn_feature_extractor_tests.py  bn_feature_extractor_transform_tests.py  causal_interventions_tests.py  cnn_filter_tests.py  concept_causal_tests.py  nmi_feature_selector_tests.py  test_causal_explainable.py  test_cfs.py  torch_nn_pruning.py
(+223 files in other folders)
