[tool.poetry]
name = "applybn"
version = "0.1.0"
description = ""
authors = ["jrzkaminski <jkaminski@niuitmo.ru>"]
readme = "README.md"
packages = [{include = "applybn"}]

[tool.poetry.dependencies]
python = "^3.10"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
